# er-sidekick

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: preflight-vanguard.ps1
src/: advise.rs  lib.rs  live.rs  main.rs  mem.rs  patch.rs  read.rs  save.rs
src/db/: accessory_name.rs  aow_name.rs  armor_name.rs  classes.rs  item_name.rs  mod.rs  weapon_name.rs
