[package]
name = "er-sidekick"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
] }

[profile.release]
opt-level = 3
lto = true
